# robot

./: .gitignore  Constants.h  file.txt  gitCommands.txt  meetingObservationsOct10
MoveRobot/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml
MoveRobot/src/: HandController.cpp  HandController.h  ParticleFilter.cpp  ParticleFilter.h  controller.cpp  keyboard.h  odometry.cpp  odometry.h
arduino/: test.sh
arduino/KTH_Robot13_rev2/: KTH_Robot13_rev2.ino  buildoutput.txt
christian_lab1/: stack.xml
christian_lab1/motor_pid/: .cproject  .project  CMakeLists.txt  mainpage.dox  manifest.xml
differential_drive/msg/: Params.msg
handdetect/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mainpage.dox  manifest.xml
handdetect/src/: Application.cpp~  RGBDSource.cpp  RGBDSource.h
landMarkLocator/: CMakeLists.txt  mainpage.dox  manifest.xml
landMarkLocator/msg/: landMark.msg
landMarkLocator/src/: landMarkLocator.cpp  thingsThatCouldGoWrong.txt
logic/: CMakeLists.txt  mainpage.dox  manifest.xml
logic/launch/: contest-phase1.launch  milestone1.launch  milestone2.launch  milestone3Test.launch
logic/src/: Logic.cpp  Logic.h  Mapping.cpp  Mapping.h  Node.cpp  Node.h  nodeExplore.cpp  nodeExplore.h
movement/: CMakeLists.txt  mainpage.dox  manifest.xml
movement/msg/: Movement.msg
movement/src/: simpleMovement.cpp
navigation/: CMakeLists.txt  manifest.xml
navigation/launch/: navtest.launch
navigation/src/: navigation.cpp  navigation.h
nodedrop/: CMakeLists.txt  mainpage.dox  manifest.xml
nodedrop/launch/: navtest.launch
nodedrop/msg/: wall.msg
nodedrop/src/: MapNode.h  Maze.cpp  Maze.h  SVGParser.cpp  Wall.cpp  Wall.h  fakeIRs (copy).cpp  fakeIRs.cpp  mapserver.cpp  realIRs.cpp
recognition/: CMakeLists.txt  mainpage.dox  manifest.xml
recognition/src/: Contest.cpp  Contest.h  fromROSMsg.h  recognition.cpp  simpleObjectRecorder.cpp
rgbdproc/: CMakeLists.txt  Makefile.noros  mainpage.dox  manifest.xml
rgbdproc/src/: DepthToPointcloudConverter.cpp  DepthToPointcloudConverter.h  MainWindow.cpp  MainWindow.h  PixbufConverter.cpp  PixbufConverter.h  PlaneEstimator.cpp  PlaneEstimator.h  PointcloudProcessor.cpp  PointcloudProcessor.h  RGBDSource.cpp  RGBDSource.h  Vec3D.h  objdet.cpp  objdet.h  rgbdproc.cpp
robot0/: #IRtest.h#  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  IRtest.cpp  IRtest.h  Makefile  cmake_install.cmake  mainpage.dox  manifest.xml  manifest.xml~  milestone0.cpp  milestone0.cpp~  milestone0.h  milestone0.h~
robot0/launch/: milestone1.launch  motorsim.launch~  navtest.launch
robot0/msg/: Distance.msg~
robot0/src/: IRtest.cpp  IRtest.cpp~  IRtest.h~  SensorPublisher.cpp  SensorPublisher.cpp~  SensorPublisher.h  SensorPublisher.h~  navigation.cpp
robot_talk/src/: robot_talk.cpp
sharps/: CMakeLists.txt  mainpage.dox  manifest.xml
sharps/launch/: milestone0.launch  milestone1.launch  sensors.launch
sharps/msg/: Distance.msg
sharps/src/: IRtest.cpp  SensorPublisher.cpp  SensorPublisher.h
simulation/: stack.xml
simulation/mapserver/: CMakeLists.txt  mainpage.dox  (+1 more)
utilityCode/: CMakeLists.txt  NoiseReducer.cpp  NoiseReducer.h  mainpage.dox  manifest.xml
(+47 files in other folders)
